--- a/SDM_paper_draft.Rmd
+++ b/SDM_paper_draft.Rmd
@@ -333,7 +333,7 @@ Each variable retained after the VIF analysis along with the 4 PCA components we
 
 Four spatial random fields ($u_{it}$) were compared for each species and each survey, these included a) a static random field (t = 1), b) independent random fields every 10 years, c) independent random fields every 5 years, and d) and independent random fields every 3 years.  For b-d the random fields were set from the most recent year, so that when the time series was not a multiple of the time series length the first years of data had a shorter duration random field (e.g. the 10 year random fields for NMFS-spring survey were 2007-2016, 1997-2006, 1987-1996, 1977-1986, and 1972-1976). Models with the same covariate structure but different random fields were compared using WAIC and DIC.  In all cases the static spatial field was an inferior model when compared to models with multiple random fields and the results discussed here use the 10/5/3 year random fields.
 
-Model selection for the different covariate models was undertaken using the 10 year random field model (due to computational constraints). Model selection was performed using WAIC and DIC and variables were retained in the model if they were within a WAIC of 2 when compared to the best performing model, more parsimonious models were favoured when the difference in WAIC/DIC was less than 2 between two models. This analysis was done for both species and all three surveys.  From this analysis only 4 model terms were identified as potentially having a significant effect on the encounter probability for each species.  For both cod and yellowtail, depth (DEP), the average sea surface temperature between 1997 and 2008 (SST), the average chlorophyll concentration between 1997 and 2008 (CHL) were retained, while for yellowtail the sediment type (SED) was also retained.  These variables were added pairwise (e.g. models included SST + DEP, DEP + CHL, and SST + CHL) and again compared using WAIC and DIC; for yellowtail a model with 3 additive terms was also compared (SST + DEP + SED).  For cod the the final model selection favoured an additive DEP and SST model, while for yellowtail the inclusion of an additional SED term was favoured.
+Model selection for the different covariate models was undertaken using a static random field (due to computational constraints). Model selection was performed using WAIC and DIC and variables were retained in the model if they were within a WAIC of 2 when compared to the best performing model, more parsimonious models were favoured when the difference in WAIC/DIC was less than 2 between two models. This analysis was done for both species and all three surveys.  From this analysis only 4 model terms were identified as potentially having a significant effect on the encounter probability for each species.  For both cod and yellowtail, depth (DEP), the average sea surface temperature between 1997 and 2008 (SST), the average chlorophyll concentration between 1997 and 2008 (CHL) were retained, while for yellowtail the sediment type (SED) was also retained.  These variables were added pairwise (e.g. models included SST + DEP, DEP + CHL, and SST + CHL) and again compared using WAIC and DIC; for yellowtail a model with 3 additive terms was also compared (SST + DEP + SED).  For cod the the final model selection favoured an additive DEP and SST model, while for yellowtail the inclusion of an additional SED term was favoured.
 
 ### Model Validation and Prediction
 
